samples/_failures_safe/1761521449_652ad9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7bd6dfb.c: In function ‘main’:
./samples/SAFE/__tmp_c7bd6dfb.c:133:5: error: expected declaration or statement at end of input
  133 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
